--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/Zavvitar/TENET/master/img/logo/Icon2.png"/>
+    <!--link rel="shortcut icon" type="image/png" href=""/-->
     <meta name="google-site-verification" content="Ufc9aAFCD-0fys2RqlbkdX4Sl-1wp8BQYV9zO0YIAQo" />
-    <meta name="description" content="TENET clan website. A Destiny 2 clan">
+    <!--meta name="description" content=""-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="css/custom.css">
