--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href ="css/custom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   
 
 </head>
@@ -58,7 +61,7 @@
         <script src="js/myscripts.js"></script>
 
         <section class="section static static-one" > <!--grid-->
-            <img src = "https://scontent.flba3-2.fna.fbcdn.net/v/t39.30808-6/272091496_6811055005633729_7363128335264105489_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=8bfeb9&_nc_eui2=AeEA54IcjB1pbGOTgLtj3JZwYplAKmp_-C1imUAqan_4Lb0Br0ypA6uYPEyXSt3-h48G2hFQvsypi28vFFBx_dYh&_nc_ohc=JXzwopXH7fkAX-jDRIw&_nc_ht=scontent.flba3-2.fna&oh=00_AT8WuJGVHDTw8DK18XnQ5bnGSlJA69wkeFaVKSK0RGD_0A&oe=6212F900" style="margin-top: 100px; width:100%; overflow-x: hidden;" alt = "warlock image">
+            <img src = "/images/studio3.jpg" style="width: 100%" alt = "Ore house Studio">
             
         </section>
         <section class="section parallax parallax-one">
@@ -70,7 +73,7 @@
 
         <section class="section static static-two" > <!--grid-->
             <div class = "containbottomimage">
-            <img class = "tucked" src = "https://scontent.flba3-2.fna.fbcdn.net/v/t39.30808-6/271931271_6811054965633733_3190608856133786623_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=8bfeb9&_nc_eui2=AeFjlHOnhoePfmRVe-iiYm5Jgsvs-fADQzmCy-z58ANDOSa8WoX65dTKjImQK9k-Wvq_73sDNC7-zoLjw-xAtkSy&_nc_ohc=hMpjt4c7zJ0AX-RziFF&_nc_ht=scontent.flba3-2.fna&oh=00_AT_5uHwK0knwO-35yYR7unHghcgPmZvrT4UW6mn9PqVeQw&oe=62121A1F" alt = "titan image">
+            <img class = "tucked" src = "/images/recordingdesk.jpg" style="width: 100%" alt = "Ore house Studio">
             </div>
         </section>
 
