--- a/oldrehersals.html
+++ b/oldrehersals.html
@@ -26,7 +26,7 @@
             <nav>
                 <ul>
                     
-                    <img src="https://web.archive.org/web/20130815193508im_/http://ore-house.co.uk/Home_files/shapeimage_1.png" style="width:240px; margin: 30px auto;">
+                    <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/logo.png" style="width:240px; margin: 30px auto;">
                     <li><a href ="index.html">Homepage</a></li>
                     <li><a href ="about.html">About</a></li>
                     <li><a href ="lessons.html">Lessons</a></li>
@@ -41,7 +41,7 @@
     <div class = "topNav">
         <nav class = BurgerBackground>
         <!--li><a class = "homepage" href ="index.html"></a></li-->
-        <p><a href ="index.html"><img class ="logoImg" alt = "Logo" src ="https://raw.githubusercontent.com/Zavvitar/TENET/master/img/logo/logo.png"></a></p>
+        <p><a href ="index.html"><img class ="logoImg" alt = "Logo" src ="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/logo.png"></a></p>
         <button class="hamburger" id="hamburger">
             <i class = "fas fa-bars"></i>
         </button>
@@ -61,7 +61,7 @@
         <script src="js/myscripts.js"></script>
 
         <section class="section static static-one" > <!--grid-->
-            <img src = "/images/recordingdesk.jpg" style="margin-top: 100px; width:100%; overflow-x: hidden;" alt = "rehersal image">
+            <img src = "https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/recordingdesk.jpg" style="margin-top: 100px; width:100%; overflow-x: hidden;" alt = "rehersal image">
             
         </section>
         <section class="section parallax parallax-one">
@@ -73,7 +73,7 @@
 
         <section class="section static static-two" > <!--grid-->
             <div class = "containbottomimage">
-            <img class = "tucked" src = "/images/mixingboard.jpg" style="width:100%;" alt = "rehersal image">
+            <img class = "tucked" src = "https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/mixingboard.jpg" style="width:100%;" alt = "rehersal image">
             </div>
         </section>
 
