--- a/about.html
+++ b/about.html
@@ -107,6 +107,10 @@
                 <div class="Containersb">
                 <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/snare.jpg" style="height:100%; display: block; margin-right: auto; margin-left: auto;">
                 </div>
+
+                <div class="Containersb">
+                <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/symbols.jpg" style="height:100%; display: block; margin-right: auto; margin-left: auto;">
+                </div>
             </div>
 
             <div class = "card-header">STUDIO</div>         
