--- a/rehersals.html
+++ b/rehersals.html
@@ -112,6 +112,10 @@
                 <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/drumkit4.jpg" style="height:100%; display: block; margin-right: auto; margin-left: auto;">
                 </div>
 
+                <div class="Containersb">
+                    <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/keyboard.jpg" style="height:100%; display: block; margin-right: auto; margin-left: auto;">
+                </div>
+
                 <!-- Back and forward buttons -->
                 <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="forward" onclick="plusSlides(1)">&#10095;</a>
@@ -129,6 +133,7 @@
                 <span class="dots" onclick="currentSlide(7)"></span>
                 <span class="dots" onclick="currentSlide(8)"></span>
                 <span class="dots" onclick="currentSlide(9)"></span>
+                <span class="dots" onclick="currentSlide(10)"></span>
             </div> 
            
 
