--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 
 </head>
 
@@ -46,13 +47,12 @@
             <i class = "fas fa-bars"></i>
         </button>
             <ul class = "nav-ul" id = "nav-ul">
-                <li><a class = "active" href ="index.html">Home</a></li>
+                <li><a href ="index.html">Homepage</a></li>
                 <li><a href ="about.html">About</a></li>
-
-                <li><a href ="photos.html">Photos</a></li>
-                <li><a href ="members.html">Admin team</a></li>
-                <li><a href ="bungielinks.html">Bungie Links</a></li>
-                <li><a href ="map.html">Login</a></li>
+                <li><a href ="lessons.html">Lessons</a></li>
+                <li><a href ="rehersals.html">Rehersals</a></li>
+                <li><a href ="repairs.html">Repairs</a></li>
+                <li><a href ="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -81,9 +81,10 @@
         </div>
            
     <div class="boxthings10c">
-        <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/carpark.jpeg" style = "width: 100%;">
+        <img src = "https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/carpark3.jpg" style="width: 100%" alt = "Ore house Studio">
     </div>
       
 
 
     </main>
+    <script src="js/myscripts.js"></script>
