--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   
 
 </head>
@@ -20,12 +21,10 @@
 
 
 <body>
-
     <div class = "head">
         <header class = "contain">
             <nav>
                 <ul>
-                    
                     <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/logo.png" style="width:240px; margin: 30px auto;">
                     <li><a href ="index.html">Homepage</a></li>
                     <li><a href ="about.html">About</a></li>
@@ -38,6 +37,7 @@
         </header>
     </div>
 
+
     <div class = "topNav">
         <nav class = BurgerBackground>
         <!--li><a class = "homepage" href ="index.html"></a></li-->
@@ -46,16 +46,16 @@
             <i class = "fas fa-bars"></i>
         </button>
             <ul class = "nav-ul" id = "nav-ul">
-                <li><a class = "active" href ="index.html">Home</a></li>
+                <li><a href ="index.html">Homepage</a></li>
                 <li><a href ="about.html">About</a></li>
-
-                <li><a href ="photos.html">Photos</a></li>
-                <li><a href ="members.html">Admin team</a></li>
-                <li><a href ="bungielinks.html">Bungie Links</a></li>
-                <li><a href ="map.html">Login</a></li>
+                <li><a href ="lessons.html">Lessons</a></li>
+                <li><a href ="rehersals.html">Rehersals</a></li>
+                <li><a href ="repairs.html">Repairs</a></li>
+                <li><a href ="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
+    
 
     <main class="main-paralax">
         <script src="js/myscripts.js"></script>
@@ -76,7 +76,6 @@
             <img class = "tucked" src = "https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/recordingdesk.jpg" style="width: 100%" alt = "Ore house Studio">
             </div>
         </section>
-
 
 
     </main>
