--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>Home</title>
     <!--link rel="shortcut icon" type="image/png" href=""/-->
     <meta name="google-site-verification" content="Ufc9aAFCD-0fys2RqlbkdX4Sl-1wp8BQYV9zO0YIAQo" />
