--- a/rehersals.html
+++ b/rehersals.html
@@ -77,7 +77,7 @@
 
                 <!-- Full images with numbers and message Info -->
                 <div class="Containersb">
-                <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/mixingboard.jpg" class = "smallimage2" style="max-width: 640px; display: block; margin-right: auto; margin-left: auto;">
+                <img src="https://raw.githubusercontent.com/Zavvitar/OREHOUSETEST/orehousetest/images/mixingboard.jpg" class = "smallimage2" style=" display: block; margin-right: auto; margin-left: auto;">
                 </div>
             
                 <div class="Containersb">
